SignInオペレーションを追加する
