# api/openapi.yaml
@@ -39,6 +39,42 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/error"
+  /sign-in:
+    post:
+      tags: [authentication]
+      operationId: signIn
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+                  format: password
+              required: [email, password]
+        required: true
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  access_token:
+                    type: string
+                  refresh_token:
+                    type: string
+                required: [access_token, refresh_token]
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
   /health:
     get:
       tags: [monitoring]
